custom mail template

--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -283,7 +283,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">Belarus BNB</div>
+            <div class="logo">Belarus Hotels</div>
         </div>
 
         <div class="main-card">
